# Copyright (C) 2021-2022 Guillaume Jouvet <guillaume.jouvet@unil.ch>
# Published under the GNU GPL (Version 3)

[options]
package_dir = igm
packages = find:
install_requires =
	importlib_resources>=5.12.0
	matplotlib==3.7.0
	netCDF4>=1.6.3
	numpy>=1.23.5
	scipy>=1.10.1
	mayavi
	tensorflow==2.11.0
	tensorflow-gpu==2.11.0
	sphinx>=6.2.1
	sphinx_rtd_theme>=1.2.0
	numpydoc>=1.5.0
	sphinx_mdinclude>=0.5.3
python_requires = >=3.6

[options.packages.find]
where = igm

[build-system]
requires = ["setuptools", "versioneer[toml]", "numpydoc", "sphinx", "sphinx_rtd_theme", "sphinx_mdinclude", "versioneer"]
build-backend = "setuptools.build_meta"

[versioneer]
VCS = git
style = pep440
versionfile_source = src/igm/_version.py
versionfile_build = igm/_version.py
tag_prefix =
parentdir_prefix = igm-
